# diabot

./: .gitignore  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW.py  CARTOGRAPHY_GUIDE.md  CHANGELOG_V2.1.md  CHECKLIST_FINAL.md  CHECKLIST_NEXT_STEPS.md  CODE_EXAMPLES.py  COMPLETION_REPORT.md  DEVELOPMENT_PLAN.md  ENV_SETUP.md  FINAL_SUMMARY.md  FINAL_SUMMARY.py  FINAL_VERDICT.txt  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_V2.md  IMPROVEMENT_SUMMARY.md  MAP_NAVIGATION_SYSTEM.md  MIGRATION_ECC_LOCALIZATION.md  MOVEMENT_AND_NAVIGATION.md  NAVIGATION_GUIDE.md  NAVIGATION_IMPLEMENTATION.md  NAVIGATION_QUICK_REFERENCE.md  NAVIGATION_SYSTEM.md  NOUVEAUTES_CARTOGRAPHIE.md  NPC_DETECTION_IMPROVEMENTS.md  POI_SYSTEM.md  QUICK_START_V2.md  README.md  README_PROJECT.md  REFACTOR_FSM_BRAINOVERLAY.md  RELIABILITY_ROADMAP.md  SCREEN_AWARENESS.md  SLAM_DEBUG_REPORT.md  SLAM_DOCUMENTATION.md  SLAM_IMPLEMENTATION_SUMMARY.md  SLAM_QUICK_START.md  STEP3_FINAL_REPORT.txt  STEP3_SUMMARY.md  TEST_RESULTS_SUMMARY.md  (+86 more)
.github/instructions/: objects.instructions.md  project.instructions.md
data/: game_progression.json  items_database.json  zones_database.json
data/maps/: TEST_ZONE_20260126_223350_metadata.json  (+3 more)
docs/: ENHANCED_DECISION_SYSTEM.md
logs/: session.jsonl
scripts/: analyze_screenshots.py  demo_enhanced_engine.py  prepare_yolo_dataset.py  run_dev.py  run_dev_advanced.py  run_yolo_inference.py  train_yolo.py
tests/: test_enhanced_engine.py  test_fsm.py  test_integration.py  test_inventory.py  test_items.py  test_logging.py  test_models.py  test_skills.py  test_vision.py
(+102 files in other folders)
